examples/ex3/test_cases/failing/check23_array_assignment_of_non_int.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    boolean field;

    public int func() {
        int[] array;

        array = new int[4];

        array[1] = field;

        return 0;
    }
}